testdata/baselines/reference/submodule/compiler/contextuallyTypedParametersOptionalInJSDoc.errors.txt
index.js(5,20): error TS7006: Parameter 'num' implicitly has an 'any' type.
index.js(16,17): error TS7006: Parameter 'a' implicitly has an 'any' type.
index.js(16,20): error TS7006: Parameter 'b' implicitly has an 'any' type.
index.js(18,5): error TS2554: Expected 2 arguments, but got 1.
index.js(27,17): error TS7006: Parameter 'a' implicitly has an 'any' type.
index.js(27,20): error TS7006: Parameter 'b' implicitly has an 'any' type.
index.js(29,5): error TS2554: Expected 2 arguments, but got 1.


==== index.js (7 errors) ====
    /**
     * 
     * @param {number} num 
     */
    function acceptNum(num) {}
                       ~~~
!!! error TS7006: Parameter 'num' implicitly has an 'any' type.
    
    /**
     * @typedef {(a: string, b: number) => void} Fn
     */
    
    /** @type {Fn} */
    const fn1 =
      /**
       * @param [b]
       */
      function self(a, b) {
                    ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
                       ~
!!! error TS7006: Parameter 'b' implicitly has an 'any' type.
        acceptNum(b); // error
        self("");
        ~~~~
!!! error TS2554: Expected 2 arguments, but got 1.
!!! related TS6210 index.js:16:20: An argument for 'b' was not provided.
        self("", undefined);
      };
    
    /** @type {Fn} */
    const fn2 =
      /**
       * @param {number} [b]
       */
      function self(a, b) {
                    ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
                       ~
!!! error TS7006: Parameter 'b' implicitly has an 'any' type.
        acceptNum(b); // error
        self("");
        ~~~~
!!! error TS2554: Expected 2 arguments, but got 1.
!!! related TS6210 index.js:27:20: An argument for 'b' was not provided.
        self("", undefined);
      };
    